[gd_scene load_steps=4 format=3 uid="uid://bptpjyff1o2q8"]

[ext_resource type="Script" uid="uid://c4l3j0gtgxgpn" path="res://Difficulty_Screen.gd" id="1_f13d2"]
[ext_resource type="PackedScene" uid="uid://cacipyxg6gu2d" path="res://scenes/ui/main_menu/start_background.tscn" id="3_3xk5x"]
[ext_resource type="FontFile" uid="uid://ckqgohldi0pme" path="res://assets/fonts/special/copyduck/Copyduck.otf" id="4_3y7k8"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_f13d2")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(0, 0, 0, 0.45098)
custom_minimum_size = Vector2(-4.19, 0)
offset_left = 402.0
offset_top = 205.0
offset_right = 884.0
offset_bottom = 366.0
size_flags_stretch_ratio = 0.0

[node name="start_background" parent="." instance=ExtResource("3_3xk5x")]

[node name="Label" type="Label" parent="."]
offset_left = 514.0
offset_top = 123.0
offset_right = 646.495
offset_bottom = 141.0
scale = Vector2(2.66, 2.66)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3y7k8")
text = "Difficulty"

[node name="Difficulty_Label" type="Label" parent="."]
offset_left = 479.0
offset_top = 257.0
offset_right = 611.495
offset_bottom = 275.0
scale = Vector2(1.93574, 2.06711)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_3y7k8")
text = "Difficulty"

[node name="Button" type="Button" parent="."]
offset_left = 416.0
offset_top = 298.0
offset_right = 864.0
offset_bottom = 339.0
text = "BACK"

[node name="DifficultySlider" type="HSlider" parent="."]
modulate = Color(1, 0, 0, 1)
offset_left = 407.0
offset_top = 200.0
offset_right = 702.565
offset_bottom = 236.0
scale = Vector2(1.605, 1.605)
max_value = 3.0
tick_count = 4
ticks_on_borders = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="DifficultySlider" to="." method="_on_difficulty_slider_value_changed"]
